# rtos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make.sh
inc/: rtos.h  rtos_kernel.h  rtos_mailbox.h  rtos_task.h  rtos_time.h  rtos_types.h
kernel/: mailbox.c  rtos.c  sched.c  task.c  time_internal.c
kernel/inc/: port.h  port_time.h  rtos_sched.h  sched.h  task.h  task_internal.h  time_internal.h
port/host/: port.c  port_lock.c  port_time.c
port/host/inc/: port_types.h
port/mimxrt1064/inc/: port_types.h
test/: host_context_test.c  host_notification_test.c  host_periodic_test.c  host_preemption_test.c
